--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <h1>Hey</h1>
+    <h1>Output</h1>
+    <div #output></div>
 </body>
 </html>
